# Macro

./: .gitignore  AGENTS.md  CMakeLists.txt  MODULE.bazel  cleaner.sh  llms.txt  plan.md  prototype_design.md  readme.md  requirements.txt  styling.qss
client/: stub.py  web_client.py
client/desktop/: main.py
client/desktop/datacenter/: backups.py  nosso.py
client/desktop/datacenter/auth/: central.py
client/desktop/music/: mclient.py  nowplaying.py
client/desktop/music/backend/: server.py
client/desktop/photos/: pclient.py  plogin.py
client/storage/: mdrive.html
client/video/: video.html
llms/resources/: build.sh
mackups/: savetombf.py
prototype/: package-lock.json  package.json
prototype/src/: App.tsx
prototype/src/components/: Auth.tsx  Dashboard.tsx  Landing.tsx
prototype/src/styles/: index.css
scutoid/: sm.html  style.css
server/: BUILD.bazel  app.cpp  app.py  blank.py  config.json  config.txt  database.db  directory.json  files.json  main.py  main_tray.py  manager.py  mcli.cpp  mcli.py  mmanager.py  scanner.cpp  scanner.py  setup.py  splash.py  streamlitmanager.py  style.tcss  tui_setup.py  web_setup.py
server/api/: fetchplaylist.py  ziptopreview.py
server/background/: api.py  fakegrep.py  scan.py  scan_music.py  sqlite.py  webdav.py
server/clients/: dashboard.html
server/clients/music/: home.html  preview.html
server/clients/music/pages/: home.html
server/clients/video/: home.html  skeleton.html
server/engine/: grabber.py
server/main/: main.py
server/pages/: finalizer.py  home.py  internet.py  locations.py  music.py  nsync.py  server.py  user_auth_setup.py
website/: index.html
website/downloads/: downloads.html
