module(
    name = "macro",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "sqlite3", version = "3.42.0.bcr.1")
bazel_dep(name = "nlohmann_json", version = "3.11.2")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "sqlitecpp",
    build_file_content = """
cc_library(
    name = "sqlitecpp",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["include/SQLiteCpp/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = ["@sqlite3//:sqlite3"],
)
    """,
    strip_prefix = "SQLiteCpp-3.3.1",
    urls = ["https://github.com/SRombauts/SQLiteCpp/archive/refs/tags/3.3.1.tar.gz"],
)

http_archive(
    name = "cpp_httplib",
    build_file_content = """
cc_library(
    name = "cpp_httplib",
    hdrs = ["httplib.h"],
    visibility = ["//visibility:public"],
)
    """,
    strip_prefix = "cpp-httplib-0.18.3",
    urls = ["https://github.com/yhirose/cpp-httplib/archive/refs/tags/v0.18.3.tar.gz"],
    sha256 = "a0567bcd6c3fe5cef1b329b96245119047f876b49e06cc129a36a7a8dffe173e",
)
