load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:deb.bzl", "pkg_deb")

cc_binary(
    name = "scanner",
    srcs = ["scanner.cpp"],
    copts = ["-std=c++17"],
    deps = [
        "@sqlitecpp",
        "@nlohmann_json//:json",
    ],
)

cc_binary(
    name = "macro_server",
    srcs = ["app.cpp"],
    copts = [
        "-std=c++17",
        "-O2",
        "-pthread",
    ],
    linkopts = ["-pthread"],
    deps = [
        "@cpp_httplib//:cpp_httplib",
        "@sqlitecpp",
        "@sqlite3//:sqlite3",      # for sqlite3.h constants
        "@nlohmann_json//:json",
    ],
)

pkg_tar(
    name = "macro_binaries",
    srcs = [
        ":macro_server",
        ":scanner",
        "macro-manager.sh",
    ],
    mode = "0755",
    package_dir = "/usr/bin",
    remap_paths = {
        "macro-manager.sh": "macro-manager",
    },
)

pkg_tar(
    name = "macro_clients",
    srcs = glob(["clients/**"]),
    package_dir = "/usr/share/macro/clients",
)

pkg_tar(
    name = "macro_manager_files",
    srcs = [
        "mmanager.py",
        "style.tcss",
    ],
    package_dir = "/usr/share/macro",
)

pkg_tar(
    name = "macro_package_data",
    deps = [
        ":macro_binaries",
        ":macro_clients",
        ":macro_manager_files",
    ],
)

pkg_deb(
    name = "macro_deb",
    architecture = "amd64",
    built_using = "bazel",
    data = ":macro_package_data",
    depends = [
        "libc6",
        "libstdc++6",
        "libsqlite3-0",
        "python3",
        "python3-requests",
    ],
    description = "Macro user-friendly self-hosting media server",
    maintainer = "Sterling Dun <sterlingdun2@example.com>",
    package = "macro-server",
    version = "0.1.0",
)
